# LiteCPU

./: .gitmodules  CMakeLists.txt  README.md
BenEater/: asm.cmd  readme.txt
contrib/: CMakeLists.txt
src/: CMakeLists.txt
src/LiteCPU/: CMakeLists.txt  Computer.cpp  Computer.h
src/runner/: CMakeLists.txt  CPUWidget.cpp  CPUWidget.h  DebugWidget.cpp  DebugWidget.h  MainApp.cpp  MainApp.h  main.cpp
